--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body{
+  background: #141414;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.sectionwrapper{
+padding: 1em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sectionitemwrapper{
+display: flex;
+width: 100%;
+overflow: hidden;
+overflow-x: scroll;
+}
+.sectionitem{
+margin: 8px;
+}
+.sectionitem > img{
+width: 160px;
+}
+.sectionitemwrapper::-webkit-scrollbar {
+  display: none;
+}
+.citemimage{
+  width: 70%;
+  margin: 0px auto;
+  margin-top: 1em;
 }
